# crabcode

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: python-publish.yml
tests/: test_acp.py  test_browser_tool.py  test_hooks.py  test_imports.py  test_logging.py  test_multi_agent.py  test_plan_mode.py  test_provider_adapters.py  test_snapshot.py  test_tool_input_helpers.py  test_web_search.py
