[project]
name = "crabcode"
version = "0.1.1"
description = "CrabCode - AI coding assistant in the terminal"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
search = [
    "usearch>=2.12.0",
    "tree-sitter-language-pack>=1.0.0",
    "sentence-transformers>=2.0.0",
    "modelscope>=1.10.0",
]
browser = ["playwright>=1.48.0"]
bedrock = ["anthropic[bedrock]>=0.40.0"]
vertex = ["anthropic[vertex]>=0.40.0"]
gateway = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "grpcio>=1.65.0",
    "grpcio-health-checking>=1.65.0",
    "sse-starlette>=2.0.0",
    "agent-client-protocol>=0.9.0",
    "httpx>=0.27.0",
]
all = [
    "crabcode[search,browser,bedrock,vertex,gateway]",
]

[project.scripts]
crabcode = "crabcode_cli.app:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/core/crabcode_core",
    "packages/cli/crabcode_cli",
    "packages/search/crabcode_search",
    "packages/gateway/crabcode_gateway",
]

[tool.uv.workspace]
members = ["packages/*"]
